--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-testing
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>OnlineBank</title>
+</head>
+<body>
+  <h1>Welcome to OnlineBank</h1>
+  <ul>
+    <li><a href="Bank_Oppgave/login.php">Login</a></li>
+    <li><a href="Bank_Oppgave/register.php">Register</a></li>
+    <li><a href="Bank_Oppgave/index.php">Index</a></li>
+    <li><a href="Bank_Oppgave/admin_panel.php">Admin Panel</a></li>
+  </ul>
+</body>
+</html>
